--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -76,7 +76,7 @@
                 window.clipboardData.setData('text','')
             }
             function cldata(){
-                if(clipboardData){
+                if(window.clipboardData){
                     clipboardData.clearData();
                 }
             }
