--- a/resources/views/Content/tourist-events.html
+++ b/resources/views/Content/tourist-events.html
@@ -206,4 +206,6 @@
 
 <style type="text/css">.blog-content-entry {
     font-size: 16px !important;
+    line-height: 1.5;
+    color: #0F0E02
 }</style>
