ene aylaliin hutulbur deer http://www.travelallmongolia.com/tour/a-classic-journey-of-mongolia-with-naadam-festival.html#.WA94lPl97IU Day 7 deer zuwhun Meal: Breakfast gej oruuliya

--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -126,7 +126,7 @@
                                 <div class="box_content">
                                     <p>Drive to airport after breakfast. Take the flight back to Ulaanbaatar and transfer to hotel.</p>
                                     <p>Rest of the day is for rest and dinner at local restaurant in Ulaanbaatar. </p>
-                                    <p><strong><em> Overnight in 4 star hotel, <br/>Meals: Breakfast, lunch and dinner </em></strong></p>
+                                    <p><strong><em> Overnight in 4 star hotel, <br/>Meals: Breakfast </em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
