ene aylal deer http://www.travelallmongolia.com/tour/western-southern-and-northern-mongolia-expedition.html#.WA95Bfl97IU Day 5, Day 11,

--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -143,7 +143,7 @@
                                     <p>After breakfast, we return to Muron for our afternoon flight to Ulaanbaatar. Upon arrival,
 
                                         transfer to the hotel in the city and rest of the day is open for you to pursue your own interest.</p>
-                                    <p><strong><em> Overnight in 4* hotel, <br/> Meals: Breakfast, lunch and dinner</em></strong></p>
+                                    <p><strong><em> Overnight in 4* hotel, <br/> Meals: Breakfast</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
@@ -267,7 +267,7 @@
                                     <p>Following breakfast, transfer back to the airport and fly to Ulaanbaatar. Rest of the day is
 
                                         open for you to pursue your own interest.</p>
-                                    <p><strong><em>Overnight in 4* hotel<br/> Meals: Breakfast, lunch and dinner</em></strong></p>
+                                    <p><strong><em>Overnight in 4* hotel<br/> Meals: Breakfast</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
