ene aylal deer http://www.travelallmongolia.com/tour/jewels-of-mongolia.html#.WA95Pvl97IU Day 4 tiim bogloy

--- a/resources/views/Tour/jewels-of-mongolia.html.twig
+++ b/resources/views/Tour/jewels-of-mongolia.html.twig
@@ -103,7 +103,7 @@
                                 <div class="box_title">Day 4 Khuvsgul Lake (Murun province) to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Drive to airport after breakfast. Take a flight back to Ulaanbaatar and transfer to hotel.
-                                        Dinner at the local restaurant in Ulaanbaatar. Stay overnight in hotel. (B, L, D)</p>
+                                        Dinner at the local restaurant in Ulaanbaatar. Stay overnight in hotel. (B)</p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
