--- a/resources/views/Tour/ultimate-mongolia.html.twig
+++ b/resources/views/Tour/ultimate-mongolia.html.twig
@@ -125,7 +125,7 @@
                                 <div class="box_title">Day 6 Return to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>After breakfast, we return to Muron for our afternoon flight to Ulaanbaatar. Upon arrival, transfer to the hotel in the city and rest of the day is open for you to pursue your own interest.</p>
-                                    <p><strong><em>Overnight in 4* hotel  <br/>Meals: Breakfast, lunch and dinner </em></strong></p>
+                                    <p><strong><em>Overnight in 4* hotel  <br/>Meals: Breakfast</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
