ene aylal deer http://www.travelallmongolia.com/tour/western-mongolia-eagle-hunting-family-and-gobi-desert.html#.WA95lvl97IU   Day 7

--- a/resources/views/Tour/western-mongolia-eagle-hunting-family-and-gobi-desert.html.twig
+++ b/resources/views/Tour/western-mongolia-eagle-hunting-family-and-gobi-desert.html.twig
@@ -186,7 +186,7 @@
                                 <div class="box_title">Day 7 Back to Ulaanbaatar</div>
                                 <div class="box_content">
                                     <p>Following breakfast, transfer back to the airport and fly to Ulaanbaatar. Rest of the day is open for you to pursue your own interest.</p>
-                                    <p><strong><em> Overnight in 4* HOTEL<br /> Meals: Breakfast, Lunch & dinner</em></strong></p>
+                                    <p><strong><em> Overnight in 4* HOTEL<br /> Meals: Breakfast</em></strong></p>
                                     <div class="clear"></div>
                                 </div>
                             </div>
