ene site nii utasnii hesgiig ni update hiisen shigee ene link deer bas update hiie http://www.travelallmongolia.com/contact/form

--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -9,10 +9,10 @@
     </address>
 
     <address>
-        <strong><i class="icon-volume-up"></i> Give Us a call:</strong>
-        <b><i class="icon-phone"></i> Mobile:</b> (976) 99000601<br/>
-        <b><i class="icon-phone"></i> Phone:</b> (976) 70152585<br/>
-        <b><i class="icon-print"></i> Fax:</b> (976) 70152585
+        <strong><i class="icon-volume-up"></i> Give Us a call:</strong><br>
+        <b><i class="icon-phone"></i> Mobile:</b> (976) 99000601, 99993033<br/>
+        <b><i class="icon-phone"></i> Phone:</b> (976) 70005599<br/>
+        <b><i class="icon-print"></i> Fax:</b> (976) 70005599
     </address>
 
     <address>
