--- a/resources/views/Page/show.html.twig
+++ b/resources/views/Page/show.html.twig
@@ -31,7 +31,7 @@
                         <div class="blog-content-title">
                             <h1>{{ page.title }}</h1>
                         </div>
-                        <div class="blog-content-entry" style="font-size: 13px; text-align: justify;">
+                        <div class="blog-content-entry" style="font-size: 16px; text-align: justify; line-height: 1.7; color: #070707">
                             {% if page.content is defined and page.content is not empty %}
                                 {% include('Content/'~page.content) %}
                             {% else %}
