--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1924,3 +1924,5 @@
             </tbody>
         </table>
 </div>
+
+<style type="text/css">.styled_table table tbody td { font-size: 16px; }</style>
