--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -5,6 +5,22 @@
 <div class="frame_quote"><blockquote>
     <p>
         <em>
+            Outstanding service from first contact thru the final day of tour everything was as advertised and the entire tour was all that I had
+            hoped for.
+            <br> Guide: Sarah was an absolute delight. She is very professional and knowledgeable and always makes sure that her clients are
+            <br> I travel extensively in rural areas like Tibet, Africa, and Bhutan etc and did not expect the high standard shown by Travel All
+            Mongolia. The company kept me very well informed on every detail and was superb in advising the tour to my interest and ability. The
+            guide, Sarah could not have been better and drivers were outstanding. I have been so pleased that I was lucky enough to find such a
+            professional and responsible tour Company. I will definitely use them again and recommend them to everyone. </em></p>
+    <p>
+        <span style="color:#000000"><strong>Joseph Breen, USA – Ultimate Mongolia 18 days</strong></span></p>
+    <p><img src="/images/Joseph.jpeg" alt="Luisa"></p>
+</blockquote>
+</div>
+
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>
             We had a great trip; very worthwhile. Our guide was superb, accommodations quite good and the tour very worthwhile.
             The first Ger camp (Gobi Nomad Lodge) was excellent: great food and accommodations. The staff was really good and the Chef cooked superb food. We particularly liked his cooking demonstration.
             Our Guide, Boloro, was fantastic. She was caring, conscientious, always on time and knowledgeable. We enjoyed spending time with her and getting insight into Mongolian culture. She's a real asset to your company.
