mapiig ni jaahan tomruulah bolomj bnuu

--- a/resources/views/Tour/winter-festival-tour.html.twig
+++ b/resources/views/Tour/winter-festival-tour.html.twig
@@ -200,9 +200,9 @@
 
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
-                        <h3 class="widget-title">Travel map</h3>
-                        <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
+                        <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
                     </div>
+                    <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
                     <!--/ widget_categories -->
 
                     <!-- widget_recent_comments -->
