--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -35,35 +35,6 @@
                     <p>1</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
-                </td>
-                <td>
-                    <p>15<sup>th</sup> of May, 2017</p>
-                </td>
-                <td>
-                    <p>28<sup>th</sup> of May, 2017</p>
-                </td>
-                <td>
-                    <p>16 persons</p>
-                </td>
-                <td>
-                    <p>8 spaces left</p>
-                </td>
-                <td>
-                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>2</p>
-                </td>
-                <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">{{ app.content_tours.tourName('treasures-of-mongolia') }}</a></p>
                 </td>
                 <td>
@@ -90,7 +61,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>3</p>
+                    <p>2</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">{{ app.content_tours.tourName('unparalleled-luxury-tour') }}</a></p>
@@ -119,7 +90,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>4</p>
+                    <p>3</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
@@ -530,6 +501,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>13</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
+                </td>
+                <td>
+                    <p>3<sup>rd</sup> of May, 2017</p>
+                </td>
+                <td>
+                    <p>16<sup>th</sup> of May, 2017</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>8 spaces left</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>14</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of May, 2017</p>
+                </td>
+                <td>
+                    <p>28<sup>th</sup> of May, 2017</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>8 spaces left</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -632,10 +661,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
                 </td>
                 <td>
-                    <p>25<sup>th</sup> of July, 2017</p>
+                    <p>24<sup>th</sup> of July, 2017</p>
                 </td>
                 <td>
-                    <p>7<sup>th</sup> of August, 2017</p>
+                    <p>6<sup>th</sup> of August, 2017</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1190,35 +1219,6 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of August, 2017</p>
-                </td>
-                <td>
-                    <p>27<sup>th</sup> of August, 2017</p>
-                </td>
-                <td>
-                    <p>16 persons</p>
-                </td>
-                <td>
-                    <p>Available</p>
-                </td>
-                <td>
-                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>5</p>
-                </td>
-                <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
-                </td>
-                <td>
                     <p>17<sup>th</sup> of August, 2017</p>
                 </td>
                 <td>
@@ -1242,7 +1242,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>6</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">{{ app.content_tours.tourName('treasures-of-mongolia') }}</a></p>
@@ -1271,7 +1271,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>7</p>
+                    <p>6</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">{{ app.content_tours.tourName('unparalleled-luxury-tour') }}</a></p>
@@ -1300,7 +1300,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>8</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">{{ app.content_tours.tourName('taste-of-mongolia') }}</a></p>
@@ -1329,7 +1329,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>9</p>
+                    <p>8</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">{{ app.content_tours.tourName('taste-of-mongolia') }}</a></p>
@@ -1358,7 +1358,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>10</p>
+                    <p>9</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -1387,7 +1387,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>11</p>
+                    <p>10</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -1416,7 +1416,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>12</p>
+                    <p>11</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
@@ -1445,7 +1445,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>13</p>
+                    <p>12</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'ultimate-mongolia' }) }}">{{ app.content_tours.tourName('ultimate-mongolia') }}</a></p>
@@ -1474,7 +1474,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>14</p>
+                    <p>13</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'ultimate-mongolia' }) }}">{{ app.content_tours.tourName('ultimate-mongolia') }}</a></p>
@@ -1503,7 +1503,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>15</p>
+                    <p>14</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">{{ app.content_tours.tourName('western-southern-and-northern-mongolia-expedition') }}</a></p>
@@ -1532,7 +1532,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>16</p>
+                    <p>15</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">{{ app.content_tours.tourName('western-southern-and-northern-mongolia-expedition') }}</a></p>
@@ -1561,7 +1561,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>17</p>
+                    <p>16</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
@@ -1590,7 +1590,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>18</p>
+                    <p>17</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-mongolia-eagle-hunting-family-and-gobi-desert' }) }}">{{ app.content_tours.tourName('western-mongolia-eagle-hunting-family-and-gobi-desert') }}</a></p>
@@ -1716,64 +1716,6 @@
                     <p>3</p>
                 </td>
                 <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
-                </td>
-                <td>
-                    <p>6<sup>th</sup> of September, 2017</p>
-                </td>
-                <td>
-                    <p>19<sup>th</sup> of September, 2017</p>
-                </td>
-                <td>
-                    <p>16 persons</p>
-                </td>
-                <td>
-                    <p>Available</p>
-                </td>
-                <td>
-                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>4</p>
-                </td>
-                <td>
-                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">{{ app.content_tours.tourName('a-classic-journey-of-mongolia') }}</a></p>
-                </td>
-                <td>
-                    <p>11<sup>th</sup> of September, 2017</p>
-                </td>
-                <td>
-                    <p>24<sup>th</sup> of September, 2017</p>
-                </td>
-                <td>
-                    <p>16 persons</p>
-                </td>
-                <td>
-                    <p>Available</p>
-                </td>
-                <td>
-                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
-                </td>
-                <td>
-                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <p>5</p>
-                </td>
-                <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
@@ -1800,7 +1742,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>6</p>
+                    <p>4</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -1829,7 +1771,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>7</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
