--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-rural-naadam-festival.html.twig
@@ -405,3 +405,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
