--- a/resources/views/Tour/overland-discovery-with-rural-naadam-festival.html.twig
+++ b/resources/views/Tour/overland-discovery-with-rural-naadam-festival.html.twig
@@ -409,29 +409,7 @@
     </div>
 {% endblock %}
 
-
-    {% block stylesheets %}
-        {{ parent() }}
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-        <style type="text/css">
-            body { font-family: 'Roboto Condensed', sans-serif !important;}
-            body * { font-family: 'Roboto Condensed', sans-serif !important;}
-            #topmenu .dropdown {font-size: 15px; line-height: 1.8}
-            #topmenu .dropdown li a {color: #ececec;}
-            #topmenu .dropdown li a:hover {color: #ffffff;}
-            .breadcrumbs, .breadcrumbs a {font-size: 15px; color: #313131;}
-            .content .widget-container .widget-title, .content .widget-container h3, .sidebar .widget-container .widget-title, .sidebar .widget-container h3, .widget_calendar table caption {font-size: 16px;}
-            .container, .header_top .container { width: 1170px;}
-            #middle.sidebar_left .content {width: 850px;}
-            #middle.sidebar_left .sidebar { font-size: 15px; color: #131313; }
-            .widget_login p { color: #424242; font-size: 15px;}
-            .slider_medium {width: 100%}
-            .slider_medium .slider-item { width: 100%; height: auto}
-            .sidebar .quote-text {font-size: 16px;}
-            .sidebar .widget-container {line-height: 1.6;}
-            .sb .box_content{font-size: 15px;
-                line-height: 1.7;
-                color: #313131;}
-            .styled_table table tr th, .sb .box_title{font-size: 15px;}
-        </style>
-    {% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
