--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1632,10 +1632,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
-                    <p>21<sup>th</sup> of September, 2017</p>
+                    <p>28<sup>th</sup> of September, 2017</p>
                 </td>
                 <td>
-                    <p>4<sup>th</sup> of October, 2017</p>
+                    <p>11<sup>th</sup> of October, 2017</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -1711,6 +1711,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>6</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
+                </td>
+                <td>
+                    <p>14<sup>th</sup> of September, 2017</p>
+                </td>
+                <td>
+                    <p>21<sup>th</sup> of September, 2017</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-2017' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -1755,10 +1784,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
                 </td>
                 <td>
-                    <p>27<sup>th</sup> of September, 2017</p>
+                    <p>5<sup>th</sup> of October, 2017</p>
                 </td>
                 <td>
-                    <p>4<sup>th</sup> of October, 2017</p>
+                    <p>12<sup>th</sup> of October, 2017</p>
                 </td>
                 <td>
                     <p>16 persons</p>
