--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -226,7 +226,7 @@
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
                         <a href="http://www.travelallmongolia.com/contact/form">
-                            <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
+                            <span style="font-weight: bold; color: brown">Contact us</span>
                         </a>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$400</span>
