--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -219,15 +219,14 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>$2295 - $3295</span>
+                        <b style="color: #B28E1B">Price:</b> <span><a href="http://www.travelallmongolia.com/contact/form">
+                            <span style="font-weight: bold; color: brown">Contact us</span>
+                        </a></span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
-                        <a href="http://www.travelallmongolia.com/contact/form">
-                            <span style="font-weight: bold; color: brown">Contact us</span>
-                        </a>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$400</span>
                         <br/>
