http://www.travelallmongolia.com/tour/golden-eagle-festival.html#.WD8OrbJ97IU een aylaliin single supplement iig ni tur remove hiichie

--- a/resources/views/Tour/golden-eagle-festival.html.twig
+++ b/resources/views/Tour/golden-eagle-festival.html.twig
@@ -256,8 +256,8 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2017</span>
                         <br/>#}
-                        <b style="color: #B28E1B">Single supplement:</b> <span>$450</span>
-                        <br/>
+                        {#<b style="color: #B28E1B">Single supplement:</b> <span>$450</span>#}
+                        {#<br/>#}
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
 
                         {# early booking banner #}
