--- a/resources/views/Tour/golden-eagle-festival.html.twig
+++ b/resources/views/Tour/golden-eagle-festival.html.twig
@@ -402,3 +402,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
