buh page iin urgun bolgood tomruulsnii daraa jaahan banner hiimeer bnaa

--- a/resources/views/Tour/khuvsgul_lake_tour.html.twig
+++ b/resources/views/Tour/khuvsgul_lake_tour.html.twig
@@ -316,3 +316,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
