--- a/resources/views/Tour/bird_watching_trip.html.twig
+++ b/resources/views/Tour/bird_watching_trip.html.twig
@@ -132,3 +132,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
