--- a/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
+++ b/resources/views/Tour/eagle-festival-and-gobi-desert.html.twig
@@ -485,3 +485,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
