--- a/resources/views/Tour/gobi_and_beyond.html.twig
+++ b/resources/views/Tour/gobi_and_beyond.html.twig
@@ -308,3 +308,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
