--- a/resources/views/Tour/highlights_of_mongolia.html.twig
+++ b/resources/views/Tour/highlights_of_mongolia.html.twig
@@ -354,3 +354,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
