--- a/resources/views/Tour/horse-riding-in-central-part-of-mongolia.html.twig
+++ b/resources/views/Tour/horse-riding-in-central-part-of-mongolia.html.twig
@@ -326,3 +326,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
