--- a/resources/views/Tour/horse-trip-around-khuvsgul-lake.html.twig
+++ b/resources/views/Tour/horse-trip-around-khuvsgul-lake.html.twig
@@ -311,3 +311,8 @@
     </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
