--- a/resources/views/Tour/karakorum_khuvsgul.html.twig
+++ b/resources/views/Tour/karakorum_khuvsgul.html.twig
@@ -318,3 +318,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
