--- a/resources/views/Tour/overland-discovery.html.twig
+++ b/resources/views/Tour/overland-discovery.html.twig
@@ -399,3 +399,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
