--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -416,3 +416,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
