--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -356,3 +356,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
