--- a/resources/views/Tour/ultimate-mongolia.html.twig
+++ b/resources/views/Tour/ultimate-mongolia.html.twig
@@ -425,3 +425,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
