--- a/resources/views/Tour/unparalleled-luxury-tour.html.twig
+++ b/resources/views/Tour/unparalleled-luxury-tour.html.twig
@@ -358,3 +358,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
