--- a/resources/views/Tour/western-mongolia-eagle-hunting-family-and-gobi-desert.html.twig
+++ b/resources/views/Tour/western-mongolia-eagle-hunting-family-and-gobi-desert.html.twig
@@ -436,3 +436,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
