--- a/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
+++ b/resources/views/Tour/western-southern-and-northern-mongolia-expedition.html.twig
@@ -553,3 +553,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
