--- a/resources/views/Tour/winter-festival-tour.html.twig
+++ b/resources/views/Tour/winter-festival-tour.html.twig
@@ -332,3 +332,8 @@
         </div>
     </div>
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
