--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -252,6 +252,8 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
 </div>
 </noscript>
 
+<div class="drop">
+</div>
 <script type="text/javascript" src="/js/snowflake.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
