--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -56,7 +56,7 @@
                 <div class="">
                     <div class="post-item">
                         <div class="post-aside clearfix">
-                            <div class="entry">
+                            <div class="entry" style="font-size: 16px;">
                                 {{ tour.overview |raw }}
                             </div>
 
