http://www.travelallmongolia.com/tour/taste-of-mongolia-with-naadam-festival.html#.WFqABlN97IU ene page iin hajuu tald not included testimonials 2 iin dund ni tald ni enigi bicheed linktei ni holboy A Classic Journey of Mongolia with Naadam Festival 15 days

--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -343,6 +343,17 @@
                     </div>
                 </div>
 
+                <div class="sb sb_dark">
+                    <div class="box_content">
+                        <div class="entry">
+                            <a href="/tour/a-classic-journey-of-mongolia-with-naadam-festival.html">
+                                <img src="/images/classic-journey-banner.png"
+                                            alt="A Classic Journey of Mongolia with Naadam Festival 15 days"></a>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+
                 <div class="sb sb_blue">
                     <div class="box_title">Testimonial</div>
                     <div class="box_content">
