--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -232,7 +232,8 @@
         slidesPerView: 1,
         paginationClickable: true,
         spaceBetween: 30,
-        loop: true
+        loop: true,
+        calculateHeight:true
     });
 </script>
 
