--- a/resources/views/Tour/_tour_style.html.twig
+++ b/resources/views/Tour/_tour_style.html.twig
@@ -19,4 +19,5 @@
         line-height: 1.7;
         color: #313131;}
     .styled_table table tr th, .sb .box_title{font-size: 15px;}
+    .post-item .post-aside .entry {font-size: 16px;}
 </style>
