--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -273,7 +273,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
 </div>
 <script type="text/javascript" src="/js/snowflake.js"></script>
 <script type="text/javascript">
-    /*$(document).ready(function() {
+    $(document).ready(function() {
         $('body').christmassnow({
             snowflaketype: 23, // 1 to 25 types of flakes are available change the number from 1 to 25. each one contain different images.
             snowflakesize: 2, //snowflakesize is 1 then it get the size of the image as random , if the snowflakesize is 2 means size of the image as custom
@@ -282,7 +282,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             snowflakespeed: 10, // falling speed of flake 10 sec is default
             flakeheightandwidth: 15 // if you are mention that option flakesize is 2 then this flakeheightandwidth should work values are in pixels 16*16.
         });
-    });*/
+    });
 </script>
 </body>
 
