--- a/resources/views/Tour/_tour_style.html.twig
+++ b/resources/views/Tour/_tour_style.html.twig
@@ -8,7 +8,7 @@
     .breadcrumbs, .breadcrumbs a {font-size: 15px; color: #313131;}
     .content .widget-container .widget-title, .content .widget-container h3, .sidebar .widget-container .widget-title, .sidebar .widget-container h3, .widget_calendar table caption {font-size: 16px;}
     .container, .header_top .container { width: 1170px;}
-    #middle.sidebar_left .content {width: 850px;}
+
     #middle.sidebar_left .sidebar { font-size: 15px; color: #131313; }
     .widget_login p { color: #424242; font-size: 15px;}
     .slider_medium {width: 100%}
@@ -20,4 +20,7 @@
         color: #313131;}
     .styled_table table tr th, .sb .box_title{font-size: 15px;}
     .post-item .post-aside .entry {font-size: 16px;}
+    @media (min-width: 768px) {
+        #middle.sidebar_left .content {width: 850px;}
+    }
 </style>
