--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1831,7 +1831,7 @@
     .styled_table table tr th, .sb .box_title{font-size: 15px;}
     .post-item .post-aside .entry {font-size: 16px;}
     @media (min-width: 768px) {
-        .content, .container, .header_top .container { width: 1170px;}
+        #middle.full_width .content, .container, .header_top .container { width: 1170px;}
         #middle.sidebar_left .content {width: 850px;}
     }
 </style>
