ene neg uguulberiig 2 page deer tawih

--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -59,6 +59,12 @@
                     </div>
                     <!--/ widget_categories -->
 
+                    <div class="widget-container widget_categories">
+                        <p style="font-style: italic; color: green;">
+                            Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
+                            cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
+                    </div>
+
                     <!-- widget_categories -->
                     <div class="widget-container widget_categories">
                         <h3 class="widget-title" style="margin-bottom:0;">Travel map</h3>
