--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -60,7 +60,8 @@
                     <!--/ widget_categories -->
 
                     <div class="widget-container widget_categories">
-                        <p>Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
+                        <p style="font-style: italic; color: green;">
+                            Book this trip and stay in a Deluxe get at Gobi Nomad Lodge for three nights at no additional
                             cost. The Deluxe gers have en-suite bathrooms with shower and air-conditioning.</p>
                     </div>
 
