classic-journey-of-mongolia-banner

--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -169,7 +169,7 @@
                 </div>
 
                 <a href="/tour/a-classic-journey-of-mongolia-with-naadam-festival.html">
-                    <img src="/images/classic-journey-banner.png"
+                    <img src="/images/classic-journey-of-mongolia-banner.jpg"
                          alt="A Classic Journey of Mongolia with Naadam Festival 15 days"></a>
 
                 <div class="sb sb_blue">
