--- a/resources/views/Tour/golden-eagle-festival.html.twig
+++ b/resources/views/Tour/golden-eagle-festival.html.twig
@@ -63,6 +63,7 @@
                     </div>
                     <a href="{{ tour.mapLarge }}" data-rel="prettyPhoto" title="Travel map" hidefocus="true" rel="prettyPhoto" style="outline: none;"><img src="{{ tour.map }}" width="380" class="frame_box"/></a>
 
+                    {% if tour.highlights is not empty %}
                     <!-- widget_recent_comments -->
                     <div class="widget-container widget_popular">
                         <h3 class="widget-title">Highlights</h3>
@@ -73,6 +74,11 @@
                         </ul>
                     </div>
                     <!--/ widget_recent_comments -->
+                    {% endif %}
+
+                    <a href="/tour/eagle-festival-and-gobi-desert.html">
+                        <img src="/images/eagle-festival-and-gobi-desert-banner.jpg"
+                             alt="eagle-festival-and-gobi-desert"></a>
 
                     {{ include('Tour/_discount.html.twig') }}
 
