eagle-festival-and-gobi-desert

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -1632,6 +1632,35 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
                 </td>
                 <td>
+                    <p>7<sup>th</sup> of September, 2017</p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of October, 2017</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'golden-eagle-festival-and-gobi-desert-2017' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">{{ app.content_tours.tourName('eagle-festival-and-gobi-desert') }}</a></p>
+                </td>
+                <td>
                     <p>21<sup>th</sup> of September, 2017</p>
                 </td>
                 <td>
@@ -1655,7 +1684,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>4</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -1684,7 +1713,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>5</p>
+                    <p>6</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
@@ -1713,7 +1742,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>6</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'golden-eagle-festival' }) }}">{{ app.content_tours.tourName('golden-eagle-festival') }}</a></p>
