jewels of mongolia with rual naadam giin update itinerary yawuulsan

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -980,10 +980,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
                 </td>
                 <td>
-                    <p>3<sup>rd</sup> of July, 2017</p>
+                    <p>3<sup>rd</sup> of July, 2017-2018</p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of July, 2017</p>
+                    <p>14<sup>th</sup> of July, 2017-2018</p>
                 </td>
                 <td>
                     <p>2 - 16 persons</p>
@@ -1009,10 +1009,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
                 </td>
                 <td>
-                    <p>8<sup>th</sup> of July, 2017</p>
+                    <p>8<sup>th</sup> of July, 2017-2018</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of July, 2017</p>
+                    <p>19<sup>th</sup> of July, 2017-2018</p>
                 </td>
                 <td>
                     <p>2 - 16 persons</p>
