--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -161,7 +161,7 @@
     }
 </style>
 
-<script href="/js/classie.js" type="text/javascript"></script>
+<script src="/js/classie.js" type="text/javascript"></script>
 <script>
     function init() {
         window.addEventListener('scroll', function(e){
