sticky header css

--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -142,10 +142,10 @@
         padding-top: 0;
     }
     .header_top.smaller .logo {
-        width: auto;
+        width: 60px;
         height: 60px;
-        line-height: 60px;
-        font-size: 30px;
+        margin-top: 5px;
+        margin-left: 5px;
     }
     .header_top.smaller .abs-info {
         display: none;
