--- a/resources/views/homepage.html.twig
+++ b/resources/views/homepage.html.twig
@@ -231,3 +231,8 @@
 
 {% block fb_like %}
 {% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    {{ include('Tour/_tour_style.html.twig') }}
+{% endblock %}
